--- a/AlPastor.html
+++ b/AlPastor.html
@@ -137,9 +137,7 @@
             <button
               id="timer12"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              10 Min Timer
-            </button>
+            >10 Min Timer</button>
           </li>
           <li class="p-2">
             5. Dice the Pork and Pineapple. Serve in tacos, burritos, or any of
